# lunabotics23

./: LICENSE  README.md  hello_world_Xcompile_test.cpp
arduino/rover_signal_handling/: rover_signal_handling.ino
arduino/rover_signal_handling_debug/: rover_signal_handling_debug.ino
luna_rover/config/: luna_rover.rviz
luna_rover/scripts/: avoid_obst.py
luna_rover/urdf/: rover.gazebo  rover.urdf
luna_rover/worlds/: pillars.world
robot_code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.cpp  main.cpp
ros_framework/devel/: .catkin  .rosinstall  setup.sh
ros_framework/devel/lib/ctre_motors/: vex_talon_srx_motor_controllers_subscriber
ros_framework/devel/lib/drivetrain/: FRight_motor_subscriber
ros_framework/devel/lib/mining_and_hopper/: hopper_motor_subscriber
ros_framework/devel/lib/pkgconfig/: autonomy.pc  ctre_motors.pc  (+7 more)
ros_framework/install/: .rosinstall  setup.sh
ros_framework/src/autonomy/: CMakeLists.txt  package.xml
ros_framework/src/ctre_motors/: CMakeLists.txt  package.xml
ros_framework/src/drivetrain/: CMakeLists.txt
ros_framework/src/launch/: teleop.launch
ros_framework/src/luna_rover/: CMakeLists.txt  README.md  package.xml
ros_framework/src/mining_and_hopper/: CMakeLists.txt  package.xml
ros_framework/src/sys_release/: CMakeLists.txt
ros_framework/src/teleop/: CMakeLists.txt
rover_sim_gazebo+ros/launch/: rviz.launch  world.launch
rover_sim_gazebo+ros/scripts/: runCV.py
rover_sim_gazebo+ros/worlds/: demo.world
testing/: CMakeLists.txt  main.cpp
testing_src/: hello_world_Xcompile_test.cpp
(+139 files in other folders)
